--- a/index.html
+++ b/index.html
@@ -349,6 +349,19 @@
                     </li>
                 </ul>
             </address>
+            <div class="subscribe">
+                <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
+                <form action="" class="subscribe-form">
+                    <label>
+                        <input type="email" name="email" class="subscribe-input" placeholder="E-mail">
+                    </label>
+                    <button type="submit" class="submit-btn">Подписаться
+                        <svg class="subscribe-icon" width="24" height="24">
+                            <use href="./images/icons.svg#icon-send"></use>
+                        </svg>
+                    </button>                
+                </form>
+            </div>
         </div>
     </footer>
     <div class="backdrop is-hidden"data-modal>
@@ -358,6 +371,32 @@
                     <use href="./images/icons.svg#icon-close"></use>
                 </svg>
             </button>
+            <h1 class="modal-title">Оставьте свои данные, мы вам перезвоним</h1>
+            <form action="">
+                <label class="modal-label">
+                    <span>Имя</span> 
+                    <input type="text" name="user-name" class="modal-input"> 
+                    <svg class="modal-input-icon" width="18" height="18">
+                        <use href="./images/icons.svg#icon-person"></use>
+                    </svg>
+                </label>
+                <label class="modal-label">Телефон
+                    <input type="tel" name="user-tel" class="modal-input">
+                    <svg class="modal-input-icon" width="18" height="18">
+                        <use href="./images/icons.svg#icon-phone-black"></use>
+                    </svg>
+                </label>
+                <label class="modal-label">Почта
+                    <input type="email" name="user-email" class="modal-input">
+                    <svg class="modal-input-icon" width="18" height="18">
+                        <use href="./images/icons.svg#icon-email-black"></use>
+                    </svg>
+                </label>
+                <label class="modal-label">Комментарий
+                    <textarea name="user-comment" class="modal-textarea" placeholder="Введите текст"></textarea>
+                </label>
+                
+            </form>
         </div>
     </div>
     <script src="./js/modal.js"></script>
