--- a/index.html
+++ b/index.html
@@ -392,10 +392,14 @@
                         <use href="./images/icons.svg#icon-email-black"></use>
                     </svg>
                 </label>
-                <label class="modal-label">Комментарий
+                <label class="modal-label-text">Комментарий
                     <textarea name="user-comment" class="modal-textarea" placeholder="Введите текст"></textarea>
                 </label>
-                
+                <label class="modal-label-property">Соглашаюсь с рассылкой и принимаю <a class="modal-label-link" href=""> Условия договора</a> 
+                    <input type="checkbox" name="property" class="modal-property">
+                    <span class="checkbox-property"></span>
+                </label>
+                <button type="submit" class="modal-btn">Отправить</button>
             </form>
         </div>
     </div>
