--- a/index.html
+++ b/index.html
@@ -397,7 +397,8 @@
                 </label>
                 <label class="modal-label-property">Соглашаюсь с рассылкой и принимаю <a class="modal-label-link" href=""> Условия договора</a> 
                     <input type="checkbox" name="property" class="modal-property">
-                    <span class="checkbox-property"></span>
+                    <span class="checkbox-property">
+                    </span>
                 </label>
                 <button type="submit" class="modal-btn">Отправить</button>
             </form>
