--- a/index.html
+++ b/index.html
@@ -398,6 +398,9 @@
                 <label class="modal-label-property">Соглашаюсь с рассылкой и принимаю <a class="modal-label-link" href=""> Условия договора</a> 
                     <input type="checkbox" name="property" class="modal-property">
                     <span class="checkbox-property">
+                        <svg class="modal-property-icon" width="11" height="8">
+                            <use href="./images/icons.svg#icon-check"></use>
+                        </svg>
                     </span>
                 </label>
                 <button type="submit" class="modal-btn">Отправить</button>
